--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - "node"
 before_script:
   - npm install -g tiddlywiki
+  - npm update -g tiddlywiki
 script: tiddlywiki ./*wiki --build
 after_success:
   - bash ./publish.sh
